index.css
/* classes */
body {
    width: 100%;
    height: 100vh;
    overflow-x: hidden;
    overflow-y: hidden;
}

.center {
    display: flex;
    justify-content: center;
    text-align: center;
}

.background {
    z-index: -1;
    scale: 100%;
    height: 100%;
}

.title {
    z-index: 1;
}
.title h1 {
    font-family: sans-serif;
    font-weight: bold;
    color: black;
}

/* animations */

